Add status-page for new containers.
The status page uses AJAX to poll HaaS for the container's logs and status.
At this commit, the status page will always load when a container is created,
but in the future should appear only when the build fails, or while it is building

Signed-off-by: James Swanick <swanijam@gmail.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
                     <h4>2. REDCap Data File</h4>
 
                     <div class="form-group">
-                        <p>Attach an data file exported from your REDCap project page.</p>
+                        <p>Attach a data file exported from your REDCap project page.</p>
 
                         <div class="alert alert-warning">
 				<strong>Note.</strong>
