--- a/templates/list.html
+++ b/templates/list.html
@@ -20,6 +20,7 @@
                             <th>Uptime</th>
 			    <th>Stop/Start</th>
 			    <th>Remove</th>
+                            <th>Logs</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -57,6 +58,15 @@
 			                <a onclick="this.parentNode.submit()"
 				           href="#">
 				            Remove
+				        </a>
+				    </form>
+				</td>
+                                <td>
+			            <form action="containers/{{ c.cid }}/logs"
+				          method="POST">
+			                <a onclick="this.parentNode.submit()"
+				           href="#">
+				            Logs
 				        </a>
 				    </form>
 				</td>
